fix: address accordion icon color in dark mode

--- a/web-components/src/[sandbox]/sandbox.scss
+++ b/web-components/src/[sandbox]/sandbox.scss
@@ -35,7 +35,7 @@ md-theme[darkTheme] {
     }
 
     &.SERENE {
-      background-image: url("/images/brand-visuals/svg/operation-pop-background-dark.svg");
+      background-image: url("/images/brand-visuals/png/operation-pop-background-dark.png");
     }
 
     &.AURORA {
